# RND4ImpactProject

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: .env.example  Dockerfile  compose.yaml
docker/image_setup/: .env.example  Dockerfile  compose.yaml
docker/script_setup/: .env.example  Dockerfile  compose.yaml
docker/vid_setup/: .env.example  Dockerfile  compose.yaml
notebooks/: rnd4impact_colab_pipeline.ipynb
scripts/: build-report.ps1  build-report.sh  docker-build-image-setup.ps1  docker-build-image-setup.sh  docker-build-script-setup.ps1  docker-build-script-setup.sh  docker-build-vid-setup.ps1  docker-build-vid-setup.sh  docker-run-image-setup.ps1  docker-run-image-setup.sh  docker-run-script-setup.ps1  docker-run-script-setup.sh  docker-run-vid-setup.ps1  docker-run-vid-setup.sh  run-full-pipeline.sh  run-pipeline.ps1  run-pipeline.sh
src/: hf_cache_cleanup.py  pipeline_runner.py  pipeline_validate.py
src/audio_setup/: audio_setup_runner.py  pyproject.toml
src/audio_setup/configs/: MODELS.md  audio_setup_12gb.yaml  audio_setup_24gb.yaml  audio_setup_40gb.yaml  audio_setup_6gb.yaml  audio_setup_80gb.yaml  audio_setup_qwen_tts.yaml
src/audio_setup/utils/: config.py  image_prompt.py  schema.py  tts_wrapper.py
src/configs/: script_setup_llama_3_8B.yaml  script_setup_llama_8B.yaml  script_setup_phi4_mini.yaml  script_setup_qwen25_15b.yaml  script_setup_qwen3_4B.yaml  script_setup_qwen3_4b.yaml
src/image_setup/: image_setup_runner.py  pyproject.toml
src/image_setup/configs/: image_setup_12gb.yaml  image_setup_24gb.yaml  image_setup_40gb.yaml  image_setup_6gb.yaml  image_setup_80gb.yaml  image_setup_a100.yaml  image_setup_dreamshaper8.yaml  image_setup_sd15.yaml  image_setup_sdxl_fp16.yaml  image_setup_sdxl_lightning_16step.yaml  image_setup_sdxl_lightning_4step.yaml  image_setup_sdxl_lightning_8step.yaml  image_setup_sdxl_low_vram.yaml  image_setup_sdxl_turbo.yaml  image_setup_segmind_vega.yaml  image_setup_ssd1b.yaml  image_setup_ssd1b_low_vram.yaml  image_setup_t4.yaml
src/image_setup/utils/: config.py  diffusion_optimizations.py  diffusion_wrapper.py  image_prompt.py  schema.py  sdxl_wrapper.py  stage_1.py  stage_2.py
src/pipeline_configs/: pipeline_40gb.yaml  pipeline_a100.yaml  pipeline_default.yaml  pipeline_t4.yaml
src/script_setup/: config.py  pyproject.toml  script_setup_runner.py
src/script_setup/configs/: script_setup_12gb.yaml  script_setup_24gb.yaml  script_setup_40gb.yaml  script_setup_6gb.yaml  script_setup_80gb.yaml  script_setup_a100.yaml  script_setup_phi4_mini.yaml  script_setup_qwen25_15b.yaml  script_setup_qwen35_9b.yaml  script_setup_qwen35_a100.yaml  script_setup_qwen35_t4.yaml  script_setup_qwen3_4b.yaml  script_setup_t4.yaml
src/script_setup/prompts/: prompt_reader.py  stage_1.md  stage_2.md  stage_3.md  stage_4.md  stage_5.md
src/script_setup/utils/: batching.py  config.py  image_prompt.py  llm_helper.py  llm_output.py  prefetch.py  schema.py  stage_1.py  stage_2.py  stage_3.py  stage_4.py  stage_5.py  vllm_wrapper.py
src/vid_setup/: pyproject.toml  vid_setup_runner.py
src/vid_setup/configs/: MODELS.md  vid_setup_12gb.yaml  vid_setup_24gb.yaml  vid_setup_40gb.yaml  vid_setup_6gb.yaml  vid_setup_80gb.yaml  vid_setup_a100.yaml  vid_setup_animatediff.yaml  vid_setup_cogvideox_low_vram.yaml  vid_setup_ltx.yaml  vid_setup_ltx_40gb.yaml  vid_setup_ltx_low_vram.yaml  vid_setup_sana_low_vram.yaml  vid_setup_svd.yaml  vid_setup_svd_40gb.yaml  vid_setup_svd_low_vram.yaml  vid_setup_t4.yaml  vid_setup_wan_low_vram.yaml
src/vid_setup/utils/: config.py  schema.py  script.py  stage_1.py  vid_diffuser_wrapper.py  vid_diffusion_optimizations.py
tests/: test_audio_setup.py  test_config_compat.py  test_image_refiner.py  test_inference_schema.py  test_line_indices.py  test_stage_2.py  test_stage_4_parsing.py  test_vid_scene_prompts.py
