[project]
name = "rnd4impact"
version = "0.1.0"
description = "RND4Impact ML stacks: diffusion, video, NLP, TTS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    # PyTorch stack (CUDA 12.4 index via [tool.uv.sources])
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "xformers==0.0.28.post3",
    # Stable Diffusion / diffusers
    "diffusers>=0.32,<0.40",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "peft>=0.13",
    "controlnet-aux>=0.0.9",
    "invisible-watermark>=0.2.0",
    # Video I/O + tensor ops
    "imageio[ffmpeg]>=2.34",
    "av>=12.0",
    "opencv-python>=4.8",
    "einops>=0.7",
    "kornia>=0.7",
    # LLM / NLP (HF)
    "transformers>=4.44,<5",
    "tokenizers>=0.20",
    "datasets>=2.19",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
    # TTS (coqui-tts fork; import as TTS)
    "coqui-tts[languages]>=0.27.5,<0.28",
    "librosa>=0.10",
    "soundfile>=0.12",
    "scipy>=1.11",
    "pydub>=0.25",
    # Utilities
    "jupyterlab>=4.2",
    "matplotlib>=3.8",
    "huggingface-hub>=0.24",
    "pillow>=10.2",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "numpy>=1.26,<3",
    "vllm>=0.7.3",
    "ruff>=0.15.15",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0"]
sd-extras = ["compel>=2.0"]
video-extras = ["decord>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rnd4impact"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
xformers = { index = "pytorch-cu124" }

[dependency-groups]
torch = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "xformers==0.0.28.post3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
constraint-dependencies = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "xformers==0.0.28.post3",
]
