[project]
name = "rnd4impact"
version = "0.1.0"
description = "RND4Impact ML stacks: diffusion, video, NLP, TTS"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8.0"]
sd-extras = ["compel>=2.0"]
video-extras = ["decord>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rnd4impact"]

[tool.uv.workspace]
members = ["src/script_setup", "src/image_setup"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
constraint-dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "torchaudio==2.6.0",
    "xformers==0.0.29.post2",
]
