[project]
name = "rnd4impact-image-setup"
version = "0.1.0"
description = "RND4Impact SDXL scene image generation (diffusers)"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    # PyTorch stack (CUDA 12.4 index via [tool.uv.sources])
    "torch==2.6.0",
    "torchvision==0.21.0",
    "xformers==0.0.29.post2",
    # Diffusion
    "diffusers>=0.32,<0.40",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "peft>=0.13",
    "controlnet-aux>=0.0.9",
    "invisible-watermark>=0.2.0",
    # CLIP tokenizer for image_prompt normalization
    "transformers>=4.51.1,<5",
    # Pipeline utilities
    "huggingface-hub>=0.24",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26,<3",
    "setuptools>=75",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
xformers = { index = "pytorch-cu124" }

[tool.uv]
constraint-dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "xformers==0.0.29.post2",
]
