[project]
name = "rnd4impact-image-setup"
version = "0.1.0"
description = "RND4Impact SDXL scene image generation (diffusers)"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "torch==2.6.0",
    "xformers==0.0.29.post2; sys_platform == 'linux' or sys_platform == 'win32'",
    "diffusers>=0.32,<0.40",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "transformers>=4.51.1,<5",
    "huggingface-hub>=0.24,<1",
    "pillow>=10.2",
    "pyyaml>=6.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
xformers = { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }

[tool.uv]
index-strategy = "unsafe-best-match"
constraint-dependencies = [
    "torch==2.6.0",
    "xformers==0.0.29.post2",
]
