[project]
name = "rnd4impact-script-setup"
version = "0.1.0"
description = "RND4Impact vLLM script pipeline (stages 1–4)"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    "torch==2.6.0",
    "vllm==0.8.5",
    "transformers>=4.51.1,<5",
    "huggingface-hub>=0.24",
    "pillow>=10.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]
# Qwen3.5 multimodal models need vLLM >= 0.17 (pinned default is 0.8.5 for Qwen3-AWQ).
qwen35 = [
    "vllm>=0.17.0",
    "transformers>=4.57",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }

[tool.uv]
index-strategy = "unsafe-best-match"
constraint-dependencies = [
    "torch==2.6.0",
]
