[project]
name = "rnd4impact-vid-setup"
version = "0.1.0"
description = "RND4Impact video scene generation (diffusers / SVD)"
requires-python = ">=3.10,<3.13"
license = { text = "Apache-2.0" }
dependencies = [
    # PyTorch stack: CUDA 12.4 wheels on Linux/Windows via [tool.uv.sources]
    "torch==2.6.0",
    "torchvision==0.21.0",
    "xformers==0.0.29.post2; sys_platform == 'linux' or sys_platform == 'win32'",
    # Diffusion
    "diffusers>=0.32,<0.40",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "transformers>=4.51.1,<5",
    # Video I/O and tensor ops
    "imageio>=2.34",
    "imageio-ffmpeg>=0.5",
    "av>=12.0",
    "opencv-python-headless>=4.9",
    "einops>=0.8",
    "kornia>=0.7",
    # Pipeline utilities
    "huggingface-hub>=0.24",
    "pillow>=10.2",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "numpy>=1.26,<3",
    "setuptools>=75",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
torchvision = { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }
xformers = { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" }

[tool.uv]
# Prefer +cu124 wheels from the PyTorch index over CPU builds on PyPI.
index-strategy = "unsafe-best-match"
constraint-dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "xformers==0.0.29.post2",
]
